# cloudcontrol-rust

./: Cargo.toml
.claude/sessions/: 2026-03-05-session.tmp  2026-03-06-session.tmp  2026-03-07-session.tmp  2026-03-08-session.tmp  compaction-log.txt
_bmad-output/: architecture.md  project-context.md
_bmad-output/implementation-artifacts/: 10-1-server-version-endpoint.md  10-2-device-reservation-system.md  10-3-diagnostic-test-page.md  10-4-legacy-endpoint-cleanup.md  11-1-screen-to-video-recording.md  11-2-video-management.md  12-1-api-authentication.md  12-2-rate-limiting.md  12-3-graceful-shutdown.md  12-4-configurable-server-settings.md  12-5-crash-protection-and-error-handling.md  12-6-working-metrics-and-monitoring.md  13-1-shared-device-resolution-module.md  13-2-error-handling-modernization.md  13-3-frontend-modernization.md  13-4-integration-test-suite.md  13-5-dependency-cleanup.md  14-1-user-registration-and-login.md  14-2-role-based-access-control.md  14-3-team-organization-scoping.md  14-4-session-management.md  14-5-activity-audit-logging.md  1a-1-wifi-device-auto-discovery.md  1a-2-usb-device-discovery-with-adb-forwarding.md  1a-4-manual-wifi-device-addition.md  (+59 more)
config/: default_dev.yaml
docs/: api-endpoints.md  architecture.md  ci-cd-integration.md  configuration.md  data-models.md  deployment.md  index.md  project-context.md  project-scan-report.json  services.md  shared-code.md  tests.md
src/: config.rs  error.rs  lib.rs  main.rs  middleware.rs  state.rs
tests/: test_auth.rs  test_database.rs  test_rbac.rs  test_server.rs  test_services.rs  test_sessions.rs  test_teams.rs
(+85 files in other folders)
