[package]
name = "cloudcontrol"
version = "0.1.0"
edition = "2021"
description = "WiFi-based mobile device group control and monitoring platform"

[dependencies]
# Web framework + async runtime
actix-web = "4"
actix-ws = "0.3"
actix-files = "0.6"
actix-multipart = "0.7"
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Template engine
tera = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Caching
moka = { version = "0.12", features = ["future"] }

# XML parsing
quick-xml = "0.37"

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
futures = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
rand = "0.8"
bytes = "1"
mime = "0.3"
percent-encoding = "2"
urlencoding = "2"
tokio-stream = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
actix-rt = "2"
actix-web = { version = "4", features = ["macros"] }
actix-http = "3"

[profile.release]
opt-level = 3
lto = true
